# sapientacli

./: .gitignore  LICENSE  README.md  pyproject.toml  sapientacli.py
